# classify.pytorch

./: LICENSE  README.md  datamodule.py  module.py  setup.cfg  setup.py  test.py  train.py
classify/: datamodule.py  module.py  predictor.py  utils.py
