[metadata]
name = classify
version = 0.1.0
description = Classify IDCard or other with mobilenetv2 network
long_description = file: README.md LICENSE
keywords = one, two
license = MIT License
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
platforms = any



[options]
package = classify
packages = find:
install_requires =
    sprockets.http==1.5.0
    onnx==1.10.1
    onnxruntime==1.9.0
    torch==1.9.0
    torchvision==0.9.2 
    torchaudio==0.8.2
    pytorch-lightning==1.4.5
    opencv-python==4.4.0.46
    opencv-python-headless==4.5.1.48

include_package_data = True